Popular Tour section added with responsive

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- banner  -->
         <div class="banner">
             <div class="banner-container">
-                <h3 class="banner-title">Explore Your Travel</h3>
+                <h3 class="section-title">Explore Your Travel</h3>
                 <p class="banner-discription">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
                     adipiscing.<br> In et odio enim ac
                     quis sapien urna eu phasellus.</p>
@@ -58,7 +58,35 @@
 
         </div>
     </header>
-    <main></main>
+    <!-- main part -->
+    <main>
+        <!-- Popular Tours section  -->
+        <section class="tour-container">
+            <div class="tour-content">
+                <h3 class="section-title">Our Popular Tours</h3>
+                <p class="section-discription">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+                    sit massa. Sodales
+                    dictumst
+                    nec nibh pellentesque.</p>
+                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
+                    erat at
+                    .</li>
+                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                    suspendisse
+                    nullam.</li>
+                <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing
+                    risus
+                    natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                <button class="btn-primary">Read More</button>
+            </div>
+            <!-- img  -->
+            <div>
+                <img src="Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
