--- a/index.html
+++ b/index.html
@@ -86,6 +86,47 @@
                 <img src="Images/Rectangle 4.png" alt="">
             </div>
         </section>
+        <!-- Destination section  -->
+        <section></section>
+        <!-- choose us section  -->
+        <div>
+            <div class="choose-container">
+                <h3 class="section-title">Why Choose Us</h3>
+                <p class="section-discription">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+                    sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="choose-card-content">
+                <div class="choose-card hotel-color">
+                    <img src="Images/icon/hotel.png" alt="">
+                    <h3>Handpicked Hotels</h3>
+                    <p class="section-discription">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="choose-card service-color">
+                    <img src="Images/icon/web.png" alt="">
+                    <h3>World Class Service</h3>
+                    <p class="section-discription">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="choose-card guarantee-color">
+                    <img src="Images/icon/price-tag.png" alt="">
+                    <h3>Best Price Guarantee</h3>
+                    <p class="section-discription">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="choose-card special-color">
+                    <img src="Images/icon/customer-acquisition.png" alt="">
+                    <h3>Special Service</h3>
+                    <p class="section-discription">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
