Discounts section added with responsive

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- Destination section  -->
         <section></section>
         <!-- choose us section  -->
-        <div>
+        <section>
             <div class="choose-container">
                 <h3 class="section-title">Why Choose Us</h3>
                 <p class="section-discription">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
@@ -126,7 +126,46 @@
                 </div>
 
             </div>
-        </div>
+        </section>
+        <!-- Discounts section  -->
+        <section>
+            <div class="choose-container">
+                <h3 class="section-title">Deals & Discounts</h3>
+                <p class="section-discription">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+                    sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="discounts-container">
+                <div class="discounts-card">
+                    <h3>Tour To Satorini</h3>
+                    <p class="section-discription">Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h3 class="travel">Price: $1300-$1500</h3>
+                    <button class="btn-primary">Book Now</button>
+                </div>
+            </div>
+            <div class="discounts-container2">
+                <div class="discounts-card2">
+                    <h3>Tour To Satorini</h3>
+                    <p class="section-discription">Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h3 class="travel">Price: $1300-$1500</h3>
+                    <button class="btn-primary">Book Now</button>
+                </div>
+            </div>
+            <div class="discounts-container">
+                <div class="discounts-card">
+                    <h3>Tour To Satorini</h3>
+                    <p class="section-discription">Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h3 class="travel">Price: $1300-$1500</h3>
+                    <button class="btn-primary">Book Now</button>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
