see all packages button added

--- a/index.html
+++ b/index.html
@@ -165,6 +165,13 @@
                 </div>
             </div>
             </div>
+            <div class="btn-package">
+                <button class="btn-primary">See All Packages</button>
+            </div>
+        </section>
+        <!-- Perfect Place  -->
+        <section>
+
         </section>
     </main>
     <footer></footer>
