NewsLetter with form section added with responsive

--- a/index.html
+++ b/index.html
@@ -171,7 +171,36 @@
         </section>
         <!-- Perfect Place  -->
         <section>
-
+            <section class="tour-container">
+                <div class="tour-content">
+                    <h3 class="section-title">A Simple Perfect Place To Get Lost</h3>
+                    <p class="section-discription">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse
+                        nullam.</li>
+                    <button class="btn-primary">Read More</button>
+                </div>
+                <!-- img  -->
+                <div>
+                    <img src="Images/Group 40089.png" alt="">
+                </div>
+            </section>
+        </section>
+        <!-- Newsletter  -->
+        <section class="newsletter-container">
+            <div class="form-content">
+                <h3 class="section-title">Newsletter</h3>
+                <p class="section-discription">Get your daily dose of travel news & tips. Sign up today!</p>
+                <input class="form-input" type="text" name="name" id="" placeholder="Enter your name">
+                <input class="form-input" type="email" name="email" id="" placeholder="Enter your email">
+                <button class="btn-subscribe">Subscribe</button>
+            </div>
+            <div>
+                <img src="Images/Rectangle 8 (1).png" alt="">
+            </div>
         </section>
     </main>
     <footer></footer>
