--- a/index.html
+++ b/index.html
@@ -203,7 +203,24 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer-container">
+            <div class="footer-content">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <h1>Perfect <span class="travel">Travel</span></h1>
+            </div>
+            <p class="section-discription">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit
+                orci potenti vulputate.
+                Leo erat maecenas vitae elementum ultricies nullam. </p>
+            <div class="footer-icon">
+                <img src="Images/icon/twitter.png" alt="">
+                <img src="Images/icon/facebook.png" alt="">
+                <img src="Images/icon/instagram.png" alt="">
+                <img src="Images/icon/github.png" alt="">
+            </div>
+            <p class="copy-right">2024, All Rights Reserved.</p>
+        </section>
+    </footer>
 </body>
 
 </html>
