--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- header part  -->
-    <header>
+    <header class="fixed-width">
         <!-- navber  -->
         <nav>
             <div class="logo-container">
@@ -59,7 +59,7 @@
         </div>
     </header>
     <!-- main part -->
-    <main>
+    <main class="fixed-width">
         <!-- Popular Tours section  -->
         <section class="tour-container">
             <div class="tour-content">
